--- a/Astrology.html
+++ b/Astrology.html
@@ -6,6 +6,7 @@
 <title>ASTROLOGY</title>
 </head>
 <body>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
   background-image: url('back-01-01.jpeg');
