--- a/Astrology.html
+++ b/Astrology.html
@@ -2,11 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no"/>
 <title>ASTROLOGY</title>
 </head>
 <body>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 body {
   background-image: url('back-01-01.jpeg');
