--- a/Astrology.html
+++ b/Astrology.html
@@ -11,8 +11,8 @@ body {
   background-image: url('back-01-01.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-background-size: 100% 100%;
-  background-width: device-width
+background-size: cover;
+ 
 }
 </style>
 <style>
