--- a/Astrology.html
+++ b/Astrology.html
@@ -1,7 +1,6 @@
 <! DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=no"/>
 <title>ASTROLOGY</title>
 </head>
@@ -11,7 +10,8 @@ body {
   background-image: url('back-01-01.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
-background-size: cover;
+background-height: 100%;
+background-width: auto;
  
 }
 </style>
