--- a/Astrology.html
+++ b/Astrology.html
@@ -7,7 +7,7 @@
 <body>
 <style>
 body {
-  background-image: url('back-01-01.jpeg');
+  background-image: url('1st.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
 background-height: 100%;
