--- a/Astrology.html
+++ b/Astrology.html
@@ -8,6 +8,8 @@
 <style>
 body {
   background-image: url('back-01-01.jpeg');
+background-repeat: no-repeat;
+  background-attachment: fixed;
  
 }
 </style>
