--- a/Astrology.html
+++ b/Astrology.html
@@ -37,7 +37,7 @@ document.getElementById("date").innerHTML = Date();
 </br>
 <p style="text-align:center;font-size:40px;color:orange"><strong>ASTROINFO<strong></p>
 
-<p style="font-size:25px;color:yellow">Astrology is a pseudoscience that claims to divine information about human affairs and 
+<p style="text-align:center;font-size:25px;color:yellow">Astrology is a pseudoscience that claims to divine information about human affairs and 
 terrestrial events by studying the movements and relative positions of celestial objects.
  Astrology has been dated to at least the 2nd millennium BCE, and has its roots 
 in calendrical systems used to predict seasonal shifts and to interpret celestial cycles as 
