--- a/Astrology.html
+++ b/Astrology.html
@@ -272,10 +272,12 @@ systems still in use, can trace its roots to 19th–17th century BCE Mesopotamia
 </a>
 </div>
 </center>
-<ul style="color:yellow;font-size:30px">
-<li>Be and enjoy the fun in predicting zodiac result.</li>
-<li>Predict the result before we predict.</li>
-<li>Mail us the result that u have predicted.</li>
+<ul style="text-align:center;color:yellow;font-size:30px">
+Be and enjoy the fun in predicting zodiac result.
+	</br>
+Predict the result before we predict.
+</br>
+Mail us the result that u have predicted.
 </ul>
 </br>
 <style>
