--- a/Astrology.html
+++ b/Astrology.html
@@ -7,10 +7,15 @@
 <body>
 <style>
 body {
-  background-image: url('back-01-01.jpeg');
-background-repeat: no-repeat;
-  background-attachment: fixed;
- 
+  background-repeat: no-repeat;
+  background-image: url('1st.png'); 
+}
+
+/* For device width 400px and larger: */
+@media only screen and (min-device-width: 400px) {
+  body { 
+     background-image: url('back-01-01.jpeg'); 
+  }
 }
 </style>
 <style>
