--- a/Astrology.html
+++ b/Astrology.html
@@ -9,12 +9,19 @@
 body {
   background-repeat: no-repeat;
   background-image: url('1st.png'); 
+	 background-attachment: fixed;
+  background-height: 100%;
+  background-width:auto;
 }
 
 /* For device width 400px and larger: */
 @media only screen and (min-device-width: 400px) {
   body { 
      background-image: url('back-01-01.jpeg'); 
+	   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-height: 100%;
+  background-width:auto;
   }
 }
 </style>
