--- a/index.html
+++ b/index.html
@@ -11,9 +11,35 @@
 
   <div class="container">
     <span class="text1">Welcome to</span>
-    <span class="text2">ASTROINFO</span>
+    <span class="text2">OUR TEAM</span>
   </div>
   </br>
+  <style>
+    .imgstyle {
+      border: none;
+	 position: fixed;
+      left: 1%;
+      top: 1%;
+      
+    }
+
+  </style>
+  <style>
+    .pow {
+      border: none;
+	  color: white;
+      border: none;
+      padding: 16px 32px;
+      text-decoration: none;
+      font-size: 12px;
+	 position: fixed;
+      right: 3%;
+      bottom: 1%;
+      
+    }
+
+  </style>
+
   <style>
     .getStartedStyle {
       color: white;
@@ -31,10 +57,16 @@
     }
 
     .getStartedStyle:hover {
-      background-color: #0000FF;
+      background-color: #FF0000;
     }
   </style>
-  <a href="Astrology.html" class="getStartedStyle"> GET STARTED </a>
+  <div class="imgstyle">
+  <img src="16 - 1.jpg" width="150px" height="150px">
+  </div>
+  <div class="pow">
+  <p><strong>Copyrights Reserved by @our team</strong></br>All Rights are Reserved</p>
+  </div>
+  <a href="main.html" class="getStartedStyle"> GET STARTED </a>
 </body>
 
 </html>
